Ajuste de title do login e register e conteudo do index

--- a/style/login.css
+++ b/style/login.css
@@ -19,6 +19,10 @@ header{
     background-color: #1b4332;
 }
 
+.title{
+  text-decoration: none;
+}
+
 h1{
     font-size: 3.0rem;
     font-weight: 600;
