--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
-    background-color: #1b4332;
+    background-color: #C54F2B;
 }
 
 h1 {
@@ -42,7 +42,7 @@ h1 {
 }
 
 .menu-button {
-    background-color: #1B4332;
+    background-color: #C54F2B;
     color: #FFFFFF;
     border: none;
     padding: 10px 20px;
@@ -53,7 +53,7 @@ h1 {
 }
 
 .menu-button:hover {
-    background-color: #2D6A4F;
+    background-color: #C76547;
 }
 
 .dropdown {
@@ -75,7 +75,7 @@ h1 {
     padding: 12px 20px;
     font-size: 1.2rem;
     font-weight: 500;
-    color: #1B4332;
+    color: #C54F2B;
     text-decoration: none;
     border-bottom: 1px solid #F0F0F0;
 }
@@ -85,8 +85,8 @@ h1 {
 }
 
 .dropdown a:hover {
-    background-color: #D8F3DC;
-    color: #081C15;
+    background-color: #FAD4C0;
+    color: #9C2C0A;
 }
 
 .conteudo-texto, .conteudo-imagem {
@@ -104,13 +104,13 @@ h1 {
 .conteudo-texto h2 {
     font-size: 2.5rem;
     font-weight: 700;
-    color: #081C15;
+    color: #9C2C0A;
 }
 
 .conteudo-texto p {
     font-size: 1.3rem;
     font-weight: 400;
-    color: #2D6A4F;
+    color: #1A1A1A;
 }
 
 footer {
@@ -118,7 +118,7 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #1B4332;
+    background-color: #C54F2B;
     width: 100%;
     padding: 1rem 2rem;
 }
