--- a/style/resetpassword.css
+++ b/style/resetpassword.css
@@ -9,14 +9,13 @@
 
 html, body {
     height: 100%;
-    background-color: #F9FAFB;
-    overflow-x: hidden;
 }
 
-body {
+body{
+    background-color: #F9FAFB;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
 }
 
 header{
@@ -71,12 +70,11 @@ h1{
   display: block;
   padding: 12px 20px;
   font-size: 1.2rem;
-  font-weight: bold;
+  font-weight: 500;
   color: #C54F2B;
   text-decoration: none;
-  font-weight: 500;
-  transition: background-color 0.2s, color 0.2s;
   border-bottom: 1px solid #F0F0F0;
+  transition: background-color 0.2s, color 0.2s;
 }
 
 .dropdown a:last-child {
@@ -88,56 +86,59 @@ h1{
   color: #9C2C0A;
 }
 
-.container {
-  max-width: 600px;
-  margin: 2rem auto;
-  padding: 2rem;
-  background-color: #ffffff;
-  border-radius: 12px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-  flex-grow: 1;
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+    min-height: 80vh;
 }
 
-.container-cadastro{
+.box {
+    background-color: #FFFFFF;
+    padding: 2rem 3rem;
+    border-radius: 12px;
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 604px;
+}
+
+.box h2 {
+    margin-bottom: 1.5rem;
+    font-size: 2rem;
     color: #C54F2B;
+    text-align: center;
 }
 
-form label {
-  display: block;
-  margin-top: 1rem;
-  font-weight: 600;
-  color: #C54F2B;
+.box input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 1.2rem;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    font-size: 1rem;
 }
 
-form input {
-  width: 100%;
-  padding: 0.6rem 1rem;
-  margin-top: 0.3rem;
-  border: 1px solid #ccc;
-  border-radius: 6px;
-  font-size: 1rem;
-}
-
-form input:focus {
-  border-color: #9C2C0A;
+.box input:focus {
+    border-color: #9C2C0A;
     outline: none;
     box-shadow: 1px 1px 2px rgba(156, 44, 10, 0.6);
 }
 
-form button[type="submit"] {
-  margin-top: 1.5rem;
-  padding: 0.8rem 1.5rem;
-  background-color: #C54F2B;
-  color: white;
-  border: none;
-  border-radius: 6px;
-  cursor: pointer;
-  font-size: 1.2rem;
-  transition: background-color 0.3s ease;
+.box button[type="submit"] {
+    width: 100%;
+    padding: 12px;
+    background-color: #C54F2B;
+    color: white;
+    border: none;
+    font-size: 1rem;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
-form button[type="submit"]:hover {
-  background-color: #9C2C0A;
+.box button[type="submit"]:hover {
+    background-color: #9C2C0A;
 }
 
 footer{
