--- a/style.css
+++ b/style.css
@@ -96,6 +96,10 @@ h1 {
     width: 50%;
 }
 
+.imageMobile{
+    display: none;
+}
+
 .conteudo-texto {
     flex-direction: column;
     gap: 30px;
@@ -128,4 +132,17 @@ footer p {
     font-weight: 400;
     color: #FFFFFF;
     text-shadow: 8px 8px 16px rgba(0,0,0,0.5);
+}
+
+@media only screen and (max-width: 1000px){
+    main{
+        flex-direction: column;
+    }
+    .imageDesktop{
+        display: none;
+    }
+
+    .imageMobile{
+        display: block;
+    }
 }
